[gd_scene load_steps=3 format=2]

[ext_resource path="res://Objects/LevelEnd.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[node name="LevelEnd" type="Node2D"]
script = ExtResource( 1 )

[node name="EndArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndArea"]
shape = SubResource( 1 )

[node name="FadeOutTimer" type="Timer" parent="."]
wait_time = 0.85
[connection signal="area_entered" from="EndArea" to="." method="_on_EndArea_area_entered"]
[connection signal="timeout" from="FadeOutTimer" to="." method="_on_FadeOutTimer_timeout"]
